--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "gagikpog",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
+    "dev": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js & npm run gulp",
     "lint": "eslint 'src/**/*.js' || true",
     "gulp": "gulp",
